Added p and changed color

--- a/about.html
+++ b/about.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8" />
     <title>About</title>
   </head>
+
   <link rel="stylesheet" href="style.css" />
+
   <body>
     <h1>gitbash practice</h1>
+
+    <p>
+      This is helping me to learn how to make repos and branches in gitbash then
+      merge them!
+    </p>
   </body>
 </html>
