--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 
   <body>
     <h1>This is git practice</h1>
+
+    <p>I think I'm actually learning something in gitbash!!</p>
   </body>
 </html>
