made a few changes go info branch

--- a/about.html
+++ b/about.html
@@ -14,5 +14,7 @@
       This is helping me to learn how to make repos and branches in gitbash then
       merge them!
     </p>
+
+    <h3>Let's do it again!</h3>
   </body>
 </html>
