--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>This is git practice</h1>
 
     <p>I think I'm actually learning something in gitbash!!</p>
+
+    <p>Yeah i think i got this!</p>
   </body>
 </html>
